2008-08-04  Helmut Eller  <heller@common-lisp.net>

	* swank-gray.lisp (slime-output-stream): Undo last change.
	Make force-output and finish-output do the same.

2008-08-04  Masayuki Onjo <masayuki.onjo@gmail.com>

	Updates for CLISP-2.46.

	* swank-clisp.lisp (fspec-pathname, fspec-location): The structure
	of (documentation symbol 'sys::file) used to be (path . lines)
	but is now ((type path . lines) ...).

2008-08-04  Helmut Eller  <heller@common-lisp.net>

	* swank-gray.lisp (slime-output-stream): Add a slot
	"interactive-p" which should be true for streams which are flushed
	periodically by the Lisp system.  Update the relevant backends
	accordingly.

	* swank-scl.lisp (receive-if): Implemented.

	* swank-cmucl.lisp (receive,receive-if): Test for new messages in
	a loop.

	* swank.lisp (eval-for-emacs): Don't flush streams here as that
	may now block.

	* swank-lispworks.lisp (receive-if): Handle interrupts.

	* slime.el (slime-repl-clear-buffer): Delete stuff after the
	prompt too.
	(slime-with-output-to-temp-buffer): Add read-only argument.
	(slime-temp-buffer): Renamed from slime-get-temp-buffer-create.
	Drop noselect argument.

2008-08-03  Helmut Eller  <heller@common-lisp.net>

	Add some flow-control.

	* swank.lisp (make-output-function): Synchronize with Emacs on
	every 100th chunk of output.
	(wait-for-event,wait-for-event/event-loop,event-match-p): New
	functions.  Used to selectively wait for some events and to queue
	the other events.
	(dispatch-event, read-from-socket-io): Tag non-queueable events
	with :call.
	(read-from-control-thread, read-from-emacs): Process
	:call events only; enqueue the others.

	(*log-output*): Don't use synonym-streams here.  Dereference the
	symbol until we get at the real stream.
	(log-event): Escape non-ascii characters more carefully.

	* swank-backend.lisp (receive-if): New function.
	Update backends accordingly. (not yet for ABCL and SCL)

	* slime.el (slime-dispatch-event): Handle ping event.
